--- a/FirstPage.html
+++ b/FirstPage.html
@@ -21,7 +21,7 @@
                 <header>
                     <nav>
                         <div id="list" class="list1">
-                            <a href="HomePage.html" style="text-decoration: none;">Home</a>
+                            <a href="index.html" style="text-decoration: none;">Home</a>
                             <a href="#" style="text-decoration: none;">Order</a>
                             <a href="about.html" style="text-decoration: none;">About</a>
                     </nav>
